[gd_scene load_steps=15 format=3 uid="uid://b4totmfguulmf"]

[ext_resource type="Script" uid="uid://rlhw5jwmqbyc" path="res://scenes/passport.gd" id="1_ia2vn"]
[ext_resource type="Texture2D" uid="uid://53urjslnccgi" path="res://assets/clock/clock_hand12.png" id="2_1d7r8"]
[ext_resource type="Texture2D" uid="uid://df50jtdwnq5cw" path="res://assets/clock/clock_hand1.png" id="3_ygri5"]
[ext_resource type="Texture2D" uid="uid://bocs85ie88jlp" path="res://assets/clock/clock_hand2.png" id="4_sl5mf"]
[ext_resource type="Texture2D" uid="uid://c1ljd8kk2wqwk" path="res://assets/clock/clock_hand3.png" id="5_jn1n6"]
[ext_resource type="Texture2D" uid="uid://b11hsccx8gmuf" path="res://assets/clock/clock_hand4.png" id="6_8olss"]
[ext_resource type="Texture2D" uid="uid://clygfu771rj6u" path="res://assets/clock/clock_hand5.png" id="7_o86gp"]
[ext_resource type="Texture2D" uid="uid://cao8vke1rxl64" path="res://assets/clock/clock_hand6.png" id="8_sw25v"]
[ext_resource type="Texture2D" uid="uid://cpm0pmqbuw67l" path="res://assets/clock/clock_hand7.png" id="9_j2xes"]
[ext_resource type="Texture2D" uid="uid://c4f746rwtiygv" path="res://assets/clock/clock_hand8.png" id="10_5d583"]
[ext_resource type="Texture2D" uid="uid://ke0w3d0b1rhw" path="res://assets/clock/clock_hand9.png" id="11_pdbry"]
[ext_resource type="Texture2D" uid="uid://ce8bves4rrf4n" path="res://assets/clock/clock_hand10.png" id="12_johpt"]
[ext_resource type="Texture2D" uid="uid://ce08agvsxol0h" path="res://assets/clock/clock_hand11.png" id="13_l7qmj"]
[ext_resource type="Texture2D" uid="uid://dj4sfn2erodis" path="res://assets/clock/clock.png" id="14_v27hl"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ia2vn")
clock_hands = Array[Texture2D]([ExtResource("2_1d7r8"), ExtResource("3_ygri5"), ExtResource("4_sl5mf"), ExtResource("5_jn1n6"), ExtResource("6_8olss"), ExtResource("7_o86gp"), ExtResource("8_sw25v"), ExtResource("9_j2xes"), ExtResource("10_5d583"), ExtResource("11_pdbry"), ExtResource("12_johpt"), ExtResource("13_l7qmj"), ExtResource("2_1d7r8")])
char_textures = null

[node name="background" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 576.0

[node name="baggage" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 576.0

[node name="scanner" type="TextureRect" parent="."]
offset_right = 1024.0
offset_bottom = 576.0

[node name="liquid" type="RichTextLabel" parent="scanner"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="human" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="metalDetector" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="passport" type="TextureButton" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="clock" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("14_v27hl")

[node name="clockHand" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_1d7r8")

[node name="table" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="rulebook" type="TextureButton" parent="."]
offset_left = 304.0
offset_top = 66.0
offset_right = 464.0
offset_bottom = 215.0
ignore_texture_size = true
stretch_mode = 5

[node name="overlay" type="ColorRect" parent="."]
visible = false
offset_left = 434.0
offset_top = 156.0
offset_right = 474.0
offset_bottom = 196.0
color = Color(0.1254902, 0.1254902, 0.1254902, 0.70980394)

[node name="passportPopup" type="TextureRect" parent="overlay"]
layout_mode = 0
offset_left = -77.0
offset_top = -72.0
offset_right = -37.0
offset_bottom = -32.0

[node name="good" type="RichTextLabel" parent="overlay/passportPopup"]
layout_mode = 0
offset_top = 146.0
offset_right = 40.0
offset_bottom = 186.0

[node name="bad" type="RichTextLabel" parent="overlay/passportPopup"]
layout_mode = 0
offset_top = 146.0
offset_right = 40.0
offset_bottom = 186.0

[node name="rulebookPopup" type="TextureRect" parent="overlay"]
layout_mode = 0
offset_left = 106.0
offset_top = 5.0
offset_right = 146.0
offset_bottom = 45.0

[node name="rules" type="RichTextLabel" parent="overlay/rulebookPopup"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="endPopup" type="TextureRect" parent="overlay"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="rightScore" type="RichTextLabel" parent="overlay/endPopup"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="wrongScore" type="RichTextLabel" parent="overlay/endPopup"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="accuracy" type="RichTextLabel" parent="overlay/endPopup"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="next" type="TextureButton" parent="overlay/endPopup"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="action" type="HBoxContainer" parent="."]
offset_left = 775.0
offset_top = 3.0
offset_right = 1018.0
offset_bottom = 239.0

[node name="heaven" type="TextureButton" parent="action"]
layout_mode = 2

[node name="hell" type="TextureButton" parent="action"]
layout_mode = 2

[node name="effects" type="AnimatedSprite2D" parent="."]
visible = false
